<resources>
    <string name="app_name">Odoo Work</string>
    <string name="auth_type">com.odoo.work.auth</string>
    <string name="label_sign_up">Sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">John Doe</string>
    <string name="hint_password">Password</string>
    <string name="error_enter_name">Enter Name</string>
    <string name="error_enter_email">Enter Email</string>
    <string name="error_enter_password">Enter Password</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="error_login_failed">Invalid username or password.</string>
    <string name="label_login">Login</string>
    <string name="msg_signing_up">Signing up…</string>
    <string name="error_unable_to_signup">Unable to signup. Try again later</string>
    <string name="error_account_already_exists">Account already exists.</string>
    <string name="toast_account_already_created">Account already created.</string>
    <string name="msg_authenticating">Authenticating…</string>
    <string name="create_your_team">Create your team</string>
    <string name="person_or_email">Person or email to collaborate with</string>
    <string name="hint_team_name">My Team</string>
    <string name="label_continue">Continue</string>
    <string name="label_search_member">Search user</string>
    <string name="main_authority">com.odoo.work.content.models</string>
    <string name="partner_authority">com.odoo.work.orm.model.partner</string>
    <string name="partner_sync">Partner</string>
    <string name="project_authority">com.odoo.work.orm.model.project</string>
    <string name="project_sync">Project</string>
    <string name="label_app_data">App Data</string>
    <string name="msg_setting_your_account">Setting your account</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_new_invitation" formatted="false">%s invited you to collaborate with team %s</string>
    <string name="team_invitation">Invitation to collaborate</string>
    <string name="lets_collaborate">Let\'s Collaborate</string>
    <string name="label_accept">Accept</string>
    <string name="label_reject">Reject</string>
    <string name="msg_invitation">%s invites you to join the team</string>
    <string name="title_confirmation">Confirmation</string>
    <string name="msg_are_you_sure_want_to_reject_invitation">Are you sure want to reject invitation?</string>
    <string name="label_yes">Yes</string>
    <string name="label_working">Working…</string>
    <string name="msg_joining_team">Joining team.</string>
    <string name="msg_rejecting_invitation">Rejecting invitation</string>
    <string name="title_delete_team">Delete team</string>
    <string name="label_members">Members</string>
    <string name="title_leave_team">Leave</string>
    <string name="label_leave_team">Leave team</string>
    <string name="leave_team_confirm_msg">Are you sure want to leave this team ? You are not able to access any of project of this team after leaving.</string>
    <string name="label_leave">Leave</string>
    <string name="title_leaving_team">Leaving team…</string>
    <string name="remove_member_from_team">Are you sure want to remove member from team? He/She will not get any notification from your team after removing.</string>
    <string name="label_remove">Remove</string>
    <string name="title_removing_member">Removing member…</string>
    <string name="msg_member_removed">Member removed.</string>
    <string name="toast_you_left_team">You left team.</string>
    <string name="remove_team">Are you sure want to remove team? It can not be undone after remove.</string>
    <string name="title_removing_team">Removing team…</string>
    <string name="toast_team_removed">Team removed</string>
    <string name="title_create_project">Create Project</string>
    <string name="spinner_title">Select Team</string>
    <string name="error_enter_project_name">Please Enter project Name</string>
    <string name="label_no_team">No team</string>
    <string name="label_create">Create</string>
    <string name="toast_project_name_required">Project Name required</string>
    <string name="hint_project_name">Project Name</string>
    <string name="msg_creating_project">Creating project…</string>
    <string name="label_new_message">New Message</string>
    <string name="label_log_an_internal_note">Log an internal note</string>
    <string name="label_or">OR</string>
    <string name="label_send">Send</string>
    <string name="label_subject">Subject</string>
    <string name="label_message">Message</string>
    <string name="label_write_something">Write something...</string>
    <string name="error_put_some_input_for_message">Put some input for message</string>
    <string name="label_sending">Sending...</string>
    <string name="toast_message_sent">Message sent..</string>
    <string name="toast_not_able_to_send_message">Not able to send message. Try again later.</string>
    <string name="label_log">Log</string>
    <string name="label_logging">Logging...</string>
    <string name="toast_note_logged">Note logged</string>
    <string name="toast_not_able_to_log_note">Not able to log note</string>
    <string name="title_1">Title 1</string>
    <string name="title_2">Title 2</string>
    <string name="title_3">Title 3</string>
    <string name="title_4">Title 4</string>
    <string name="text_1">Text 1</string>
    <string name="label_add_task">Add task</string>
    <string name="label_add_stage">Add Stage</string>
    <string name="title_activity_task_detail_scroll">TaskDetailScroll</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="label_add">Add</string>
    <string name="label_cancel">Cancel</string>
    <string name="title_move_task">Move Task</string>
    <string name="title_project_name">Project</string>
    <string name="label_stage_name">Stage</string>
    <string name="label_project_name">Project</string>
    <string name="toast_task_title_required">Task title required</string>
    <string name="hint_task_description">Edit task description</string>
</resources>