<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/default_16dp"
    android:paddingLeft="48dp"
    android:paddingRight="48dp"
    android:paddingTop="@dimen/default_16dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/odoo_small"
        android:tint="@color/colorWhite" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorWhite">

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorWhite">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_16dp"
        android:paddingLeft="@dimen/default_16dp"
        android:paddingRight="@dimen/default_16dp"
        android:text="@string/label_login"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimaryExtraDark" />

    <Button
        android:id="@+id/btnSignup"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_16dp"
        android:paddingLeft="@dimen/default_16dp"
        android:paddingRight="@dimen/default_16dp"
        android:text="@string/label_sign_up"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimaryExtraDark" />

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/btnForgot"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/default_16dp"
        android:paddingRight="@dimen/default_16dp"
        android:text="@string/label_forgot_password"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorPrimaryExtraDark" />
</LinearLayout>
