<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="gone" />

    <ScrollView
        android:id="@+id/team_invitation_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/default_20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_8dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/lets_collaborate"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/invitationMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_16dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/teamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_20dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="35sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/default_20dp"
                android:src="@drawable/bulb" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/default_20dp"
        android:background="#d7d7d7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnReject"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_reject"
            android:textColor="#414141" />

        <Button
            android:id="@+id/btnAccept"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_accept"
            android:textColor="@color/colorPrimaryExtraDark"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>